--- a/URL directory/practice.ipynb
+++ b/URL directory/practice.ipynb
@@ -601,76 +601,76 @@
     }
    ],
    "source": [
-    "# # Fill subtopic-article with gpt-3.5\n",
+    "# Fill subtopic-article with gpt-3.5\n",
     "\n",
-    "# for i in range(1360, 1377):\n",
-    "#     # if type != article then continue\n",
-    "#     if df.loc[i, 'type'] != 'article':\n",
-    "#         continue\n",
+    "for i in range(1360, 1377):\n",
+    "    # if type != article then continue\n",
+    "    if df.loc[i, 'type'] != 'article':\n",
+    "        continue\n",
     "\n",
-    "#     if df.loc[i, 'topic-article'] == 'ns':\n",
-    "#         df.loc[i, 'subtopic-article'] = 'ns'\n",
-    "#         continue\n",
+    "    if df.loc[i, 'topic-article'] == 'ns':\n",
+    "        df.loc[i, 'subtopic-article'] = 'ns'\n",
+    "        continue\n",
     "\n",
-    "#     # grab url and clean text\n",
-    "#     url = df.loc[i, 'url']\n",
+    "    # grab url and clean text\n",
+    "    url = df.loc[i, 'url']\n",
     "\n",
-    "#     text = extract_text(url, [\"populate_recent_reviews\", \"mainnav\"])\n",
-    "#     text = text.replace(removal, \"\")\n",
+    "    text = extract_text(url, [\"populate_recent_reviews\", \"mainnav\"])\n",
+    "    text = text.replace(removal, \"\")\n",
     "\n",
-    "#     if \"Serving British Columbia, Alberta, Saskatchewan, Manitoba, Ontario and Quebec.\" in text:\n",
-    "#         text = text.replace(\"Serving British Columbia, Alberta, Saskatchewan, Manitoba, Ontario and Quebec.\", \"\")\n",
+    "    if \"Serving British Columbia, Alberta, Saskatchewan, Manitoba, Ontario and Quebec.\" in text:\n",
+    "        text = text.replace(\"Serving British Columbia, Alberta, Saskatchewan, Manitoba, Ontario and Quebec.\", \"\")\n",
     "\n",
-    "#     if removal_2 in text:\n",
-    "#         text = text.replace(removal_2, \"\")\n",
+    "    if removal_2 in text:\n",
+    "        text = text.replace(removal_2, \"\")\n",
     "\n",
-    "#     if removal_3 in text:\n",
-    "#         text = text.replace(removal_3, \"\")\n",
+    "    if removal_3 in text:\n",
+    "        text = text.replace(removal_3, \"\")\n",
     "\n",
-    "#     if removal_4 in text:\n",
-    "#         text = text.replace(removal_4, \"\")\n",
+    "    if removal_4 in text:\n",
+    "        text = text.replace(removal_4, \"\")\n",
     "\n",
-    "#     if removal_5 in text:\n",
-    "#         text = text.replace(removal_5, \"\")\n",
+    "    if removal_5 in text:\n",
+    "        text = text.replace(removal_5, \"\")\n",
     "\n",
-    "#     if \"(Vancouver, BC): \" in text:\n",
-    "#         text = text.replace(\"(Vancouver, BC): \", \"\")\n",
+    "    if \"(Vancouver, BC): \" in text:\n",
+    "        text = text.replace(\"(Vancouver, BC): \", \"\")\n",
     "\n",
-    "#     if \"in North America\" in text:\n",
-    "#         text = text.replace(\"in North America\", \"\")\n",
+    "    if \"in North America\" in text:\n",
+    "        text = text.replace(\"in North America\", \"\")\n",
     "\n",
-    "#     while len(text) > 12000:\n",
-    "#         text = text[:len(text)//2]\n",
+    "    while len(text) > 12000:\n",
+    "        text = text[:len(text)//2]\n",
     "\n",
-    "#     # grab the subtopic list\n",
-    "#     subtopics = dic.get(df.loc[i, 'topic-article'])\n",
-    "#     print(df.loc[i, 'topic-article'], \": \", subtopics)\n",
+    "    # grab the subtopic list\n",
+    "    subtopics = dic.get(df.loc[i, 'topic-article'])\n",
+    "    print(df.loc[i, 'topic-article'], \": \", subtopics)\n",
     "\n",
-    "#     # Prompt\n",
-    "#     prompt = f\"\"\"\n",
-    "#     You will be provided with a text and a list of topics.\n",
-    "#     Here is the text delimited in triple backticks (```):\n",
-    "#     ```{text}```\n",
-    "#     Here is the list of topics delimited in triple stars (***):\n",
-    "#     ***{subtopics}***\n",
-    "#     Your job is to choose a topic for the text. To do that, follow these two steps in order:\n",
-    "#     1- Which topic from the list of topics is the most applicable to the text? Print out your reasoning in full in xml tags titled <reasoning> </reasoning>.\n",
-    "#     2- Next, return the topic you selected in step 1. If none of the topics from the list of topics apply to the text, return \"ns\". Delimit your answer in xml tags titled <topic> </topic>.\n",
-    "#     \"\"\"\n",
+    "    # Prompt\n",
+    "    prompt = f\"\"\"\n",
+    "    You will be provided with a text and a list of topics.\n",
+    "    Here is the text delimited in triple backticks (```):\n",
+    "    ```{text}```\n",
+    "    Here is the list of topics delimited in triple stars (***):\n",
+    "    ***{subtopics}***\n",
+    "    Your job is to choose a topic for the text. To do that, follow these two steps in order:\n",
+    "    1- Which topic from the list of topics is the most applicable to the text? Print out your reasoning in full in xml tags titled <reasoning> </reasoning>.\n",
+    "    2- Next, return the topic you selected in step 1. If none of the topics from the list of topics apply to the text, return \"ns\". Delimit your answer in xml tags titled <topic> </topic>.\n",
+    "    \"\"\"\n",
     "\n",
-    "#     response = ChatCompletion_content(\n",
-    "#         messages = [\n",
-    "#             {\"role\": \"system\", \"content\": \"You are a helpful assistant.\"},\n",
-    "#             {\"role\": \"user\", \"content\": f\"{prompt}.\\n\"}\n",
-    "#         ]\n",
-    "#     )\n",
+    "    response = ChatCompletion_content(\n",
+    "        messages = [\n",
+    "            {\"role\": \"system\", \"content\": \"You are a helpful assistant.\"},\n",
+    "            {\"role\": \"user\", \"content\": f\"{prompt}.\\n\"}\n",
+    "        ]\n",
+    "    )\n",
     "\n",
     "\n",
-    "#     print(response, \"\\n\")\n",
+    "    print(response, \"\\n\")\n",
     "\n",
-    "#     result = re.search(r\"<topic>(.*?)</topic>\", response)\n",
+    "    result = re.search(r\"<topic>(.*?)</topic>\", response)\n",
     "\n",
-    "#     df.loc[i, 'subtopic-article'] = result.group(1)\n"
+    "    df.loc[i, 'subtopic-article'] = result.group(1)\n"
    ]
   },
   {
